# backtaskschoolx

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 417c51580d8c_create_tasks_table.py  b8f7d7142d20_add_users_and_task_owner.py  c4f940e2b3aa_add_comments_table.py
api/: auth.py  comments.py  files.py  health.py  tasks.py
auth/: dependencies.py
core/: config.py  exceptions.py  security.py
database/: db.py  models.py
repositories/: comment_repository.py  task_repository.py  user_repository.py
schemas/: auth.py  comment.py  task.py
services/: task_service.py
tests/integration/: test_create_task.py
tests/unit/: test_task_service.py
