[project]
name = "backtask"
version = "0.1.0"
description = "API для управления задачами"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "python-jose>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "minio>=7.2.0",
    "python-multipart>=0.0.7",
]
